--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-02 17:03+0300\n"
+"PO-Revision-Date: 2018-10-03 12:12+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -394,7 +394,7 @@ msgstr ""
 msgid "Title"
 msgstr ""
 
-msgid "Select classification"
+msgid "Select information domain"
 msgstr ""
 
 msgid "Show technical namespaces"
