YTI-1107 Use term "selected domains" instead of "classifications" in interactive instructions

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-03 12:32+0300\n"
+"PO-Revision-Date: 2018-10-03 12:50+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -675,7 +675,7 @@ msgid "Classes can be seen visually here"
 msgstr ""
 
 msgid "Classifications are here"
-msgstr "Classifications can bee seen in here"
+msgstr "Selected domains are here"
 
 msgid "Concept is here"
 msgstr ""
