--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-03 12:50+0300\n"
+"PO-Revision-Date: 2018-10-03 15:27+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -179,7 +179,7 @@ msgid "Additional information"
 msgstr ""
 
 msgid "Add property"
-msgstr ""
+msgstr "Add attribute or association"
 
 msgid "No properties yet"
 msgstr ""
@@ -1369,7 +1369,7 @@ msgid "Concept suggestion information"
 msgstr ""
 
 msgid "Class properties"
-msgstr ""
+msgstr "Class attributes and associations"
 
 msgid "Shape properties"
 msgstr ""
@@ -1674,7 +1674,7 @@ msgid "Copy properties"
 msgstr ""
 
 msgid "Copy properties from class"
-msgstr ""
+msgstr "Copy attributes or associations from class"
 
 msgid "Session expired"
 msgstr ""
