YTI-943 Fix translation of shape properties

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-05 15:20+0300\n"
+"PO-Revision-Date: 2018-10-05 16:37+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1375,7 +1375,7 @@ msgid "Class properties"
 msgstr "Class attributes and associations"
 
 msgid "Shape properties"
-msgstr ""
+msgstr "Shape attributes and associations"
 
 msgid "Show excluded"
 msgstr ""
