YTI-918 Fix validation error texts of prefix and required field

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-05 16:37+0300\n"
+"PO-Revision-Date: 2018-10-11 09:41+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -257,7 +257,7 @@ msgid "Existing id error"
 msgstr ""
 
 msgid "Required error"
-msgstr ""
+msgstr "Required"
 
 msgid "Required localized error"
 msgstr ""
@@ -272,7 +272,7 @@ msgid "Length error"
 msgstr ""
 
 msgid "Prefix error"
-msgstr ""
+msgstr "Prefix can contain only lowercase letters. No Scandinavian letters."
 
 msgid "Negative error"
 msgstr ""
