--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.1.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Copied"
@@ -332,10 +332,10 @@ msgstr "Lisää soveltamisprofiili"
 msgid "ToolInfo"
 msgstr ""
 "Tietomallit-työkalu on julkishallinnon organisaatioiden tietomallintajien ja "
-"tietoarkkitehtien työkalu, jolla kuvataan omien järjestelmien tietosisältöjä "
-"ja -rakennetta. Tietomallit-työkalu tekee julkishallinnon julkisten tietojen "
-"loogisesta tietomallityöstä avointa ja julkista, minkä vuoksi tietomallien "
-"hyödyntäminen organisaatiorajojen yli helpottuu."
+"tietoarkkitehtien työkalu, jolla kuvataan tietojärjestelmien ja rajapintojen "
+"tietosisältöjä ja -rakennetta. Tietomallit-työkalu tekee julkishallinnon "
+"julkisten tietojen loogisesta tietomallityöstä avointa ja julkista, minkä "
+"vuoksi tietomallien hyödyntäminen organisaatiorajojen yli helpottuu."
 
 msgid "Search model"
 msgstr "Hae tietomallia"
