YTI-1098: Dropdown nappi mallin tietojen muokkaukseen

--- a/po/fi.po
+++ b/po/fi.po
@@ -132,6 +132,15 @@ msgstr "Ei hakutuloksia"
 msgid "Data Vocabularies"
 msgstr "Tietomallit"
 
+msgid "Choose action"
+msgstr "Valitse toiminto"
+
+msgid "Show"
+msgstr "Näytä"
+
+msgid "Download"
+msgstr "tallenna"
+
 msgid "Confirm delete"
 msgstr "Poistamisen hyväksyntä"
 
@@ -140,15 +149,6 @@ msgstr "Seuraavat asiat riippuvat poistettavasta"
 
 msgid "Are you sure that you want to delete?"
 msgstr "Oletko varma, että haluat poistaa?"
-
-msgid "Show"
-msgstr "Näytä"
-
-msgid "Download"
-msgstr "tallenna"
-
-msgid "Export"
-msgstr "Lataa"
 
 msgid "Historical versions"
 msgstr "Historialliset versiot"
@@ -2212,6 +2212,9 @@ msgstr "Attribuutti"
 
 msgid "owl:ObjectProperty"
 msgstr "Assosiaatio"
+
+#~ msgid "Export"
+#~ msgstr "Lataa"
 
 #~ msgid "Delete property"
 #~ msgstr "Poista ominaisuus"
