--- a/po/en.po
+++ b/po/en.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-10-11 11:12+0300\n"
+"PO-Revision-Date: 2018-11-13 12:36+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -133,13 +133,7 @@ msgstr ""
 msgid "Data Vocabularies"
 msgstr ""
 
-msgid "Confirm delete"
-msgstr ""
-
-msgid "Following items are depending on the deleted"
-msgstr ""
-
-msgid "Are you sure that you want to delete?"
+msgid "Choose action"
 msgstr ""
 
 msgid "Show"
@@ -148,7 +142,13 @@ msgstr ""
 msgid "Download"
 msgstr ""
 
-msgid "Export"
+msgid "Confirm delete"
+msgstr ""
+
+msgid "Following items are depending on the deleted"
+msgstr ""
+
+msgid "Are you sure that you want to delete?"
 msgstr ""
 
 msgid "Historical versions"
