--- a/po/en.po
+++ b/po/en.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-11-07 13:36+0200\n"
+"PO-Revision-Date: 2018-11-13 17:07+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -211,10 +211,25 @@ msgstr "Technical metadata"
 msgid "Reusable predicate"
 msgstr ""
 
+msgid "Add class"
+msgstr ""
+
 msgid "Select class"
 msgstr ""
 
-msgid "Add class"
+msgid "All statuses"
+msgstr ""
+
+msgid "Name"
+msgstr ""
+
+msgid "Model"
+msgstr ""
+
+msgid "Description"
+msgstr ""
+
+msgid "Modified at"
 msgstr ""
 
 msgid " without referencing concept"
@@ -414,9 +429,6 @@ msgstr ""
 msgid "All groups"
 msgstr ""
 
-msgid "All statuses"
-msgstr ""
-
 msgid "Create new"
 msgstr ""
 
@@ -448,9 +460,6 @@ msgid "Suomi.fi Reference Data"
 msgstr ""
 
 msgid "User right management"
-msgstr ""
-
-msgid "Name"
 msgstr ""
 
 msgid "Email"
@@ -733,9 +742,6 @@ msgstr ""
 msgid "Definition"
 msgstr ""
 
-msgid "Description"
-msgstr ""
-
 msgid "Description info"
 msgstr "Description of a resource"
 
@@ -983,9 +989,6 @@ msgid "Vocabulary"
 msgstr "Terminology"
 
 msgid "You can add new attribute or association to the Class from here"
-msgstr ""
-
-msgid "Modified at"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -2269,9 +2272,6 @@ msgstr "Association"
 
 #~ msgid "IOW"
 #~ msgstr "Interoperability descriptions"
-
-#~ msgid "Models"
-#~ msgstr "Core Vocabularies"
 
 #~ msgid "Vocabulary filter"
 #~ msgstr "Terminology filter"
