--- a/po/template.pot
+++ b/po/template.pot
@@ -124,15 +124,6 @@ msgstr ""
 msgid "Data Vocabularies"
 msgstr ""
 
-msgid "Choose action"
-msgstr ""
-
-msgid "Show"
-msgstr ""
-
-msgid "Download"
-msgstr ""
-
 msgid "Confirm delete"
 msgstr ""
 
@@ -140,6 +131,12 @@ msgid "Following items are depending on the deleted"
 msgstr ""
 
 msgid "Are you sure that you want to delete?"
+msgstr ""
+
+msgid "Show"
+msgstr ""
+
+msgid "Download"
 msgstr ""
 
 msgid "Export"
@@ -209,6 +206,9 @@ msgid "Select class"
 msgstr ""
 
 msgid "Add class"
+msgstr ""
+
+msgid "All information domains"
 msgstr ""
 
 msgid "All statuses"
