YTI-304 Add creation of new class by button
Also add loading indicator to search result label and clean the code a little bit by removing or commenting all references to unused AddNewClass class.

--- a/po/fi.po
+++ b/po/fi.po
@@ -234,6 +234,9 @@ msgstr "Kuvaus"
 msgid "Modified at"
 msgstr "Muokattu"
 
+msgid "New class"
+msgstr "Uusi luokka"
+
 msgid " without referencing concept"
 msgstr ""
 
