--- a/po/template.pot
+++ b/po/template.pot
@@ -214,6 +214,12 @@ msgstr ""
 msgid "All statuses"
 msgstr ""
 
+msgid "Create shape from external URI"
+msgstr ""
+
+msgid "Search existing class"
+msgstr ""
+
 msgid "Name"
 msgstr ""
 
@@ -227,6 +233,9 @@ msgid "Modified at"
 msgstr ""
 
 msgid "New class"
+msgstr ""
+
+msgid "Shape from URI"
 msgstr ""
 
 msgid " without referencing concept"
