YTI-352 Add related class: localizations and code cleaning
Bugs in the yti-datamodel-api has been fixed so this should be working now, somehow.

--- a/po/fi.po
+++ b/po/fi.po
@@ -240,6 +240,15 @@ msgstr "Kuvaus"
 msgid "Modified at"
 msgstr "Muokattu"
 
+msgid "Copy class"
+msgstr "Kopio luokka"
+
+msgid "Create sub class"
+msgstr "Luo alaluokka"
+
+msgid "Create super class"
+msgstr "Luo yläluokka"
+
 msgid "New class"
 msgstr "Uusi luokka"
 
