--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-12-05 15:15+0200\n"
+"PO-Revision-Date: 2018-12-21 12:50+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -38,6 +38,9 @@ msgid "${body}"
 msgstr ""
 
 msgid "Copy"
+msgstr ""
+
+msgid "Imported namespaces"
 msgstr ""
 
 msgid "All models"
@@ -77,9 +80,6 @@ msgid "Contributors"
 msgstr ""
 
 msgid "Add contributor"
-msgstr ""
-
-msgid "Imported namespaces"
 msgstr ""
 
 msgid "Import namespace"
@@ -1015,7 +1015,7 @@ msgstr "Terminology"
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Member groups"
+msgid "Admin groups"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1457,10 +1457,10 @@ msgstr ""
 msgid "Created at"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Member groups"
 msgstr ""
 
-msgid "Admin groups"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Add properties from class"
@@ -1542,6 +1542,12 @@ msgid "Create new attribute"
 msgstr ""
 
 msgid "Create new association"
+msgstr ""
+
+msgid "New attribute"
+msgstr ""
+
+msgid "New association"
 msgstr ""
 
 msgid "by referencing external uri"
