--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-12-21 12:50+0200\n"
+"PO-Revision-Date: 2018-12-21 16:59+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1015,7 +1015,7 @@ msgstr "Terminology"
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Admin groups"
+msgid "Add properties from scope class"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1460,7 +1460,7 @@ msgstr ""
 msgid "Member groups"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Admin groups"
 msgstr ""
 
 msgid "Add properties from class"
@@ -1469,7 +1469,7 @@ msgstr ""
 msgid "Add properties from super class"
 msgstr ""
 
-msgid "Add properties from scope class"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Add properties from profile class"
@@ -1548,6 +1548,24 @@ msgid "New attribute"
 msgstr ""
 
 msgid "New association"
+msgstr ""
+
+msgid "Copy attribute"
+msgstr ""
+
+msgid "Copy association"
+msgstr ""
+
+msgid "Create sub attribute"
+msgstr ""
+
+msgid "Create sub association"
+msgstr ""
+
+msgid "Create super attribute"
+msgstr ""
+
+msgid "Create super association"
 msgstr ""
 
 msgid "by referencing external uri"
