--- a/po/template.pot
+++ b/po/template.pot
@@ -952,7 +952,7 @@ msgstr ""
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Admin groups"
+msgid "Add properties from scope class"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1368,7 +1368,7 @@ msgstr ""
 msgid "Member groups"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Admin groups"
 msgstr ""
 
 msgid "Add properties from class"
@@ -1377,7 +1377,7 @@ msgstr ""
 msgid "Add properties from super class"
 msgstr ""
 
-msgid "Add properties from scope class"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Add properties from profile class"
@@ -1456,6 +1456,24 @@ msgid "New attribute"
 msgstr ""
 
 msgid "New association"
+msgstr ""
+
+msgid "Copy attribute"
+msgstr ""
+
+msgid "Copy association"
+msgstr ""
+
+msgid "Create sub attribute"
+msgstr ""
+
+msgid "Create sub association"
+msgstr ""
+
+msgid "Create super attribute"
+msgstr ""
+
+msgid "Create super association"
 msgstr ""
 
 msgid "by referencing external uri"
