--- a/po/fi.po
+++ b/po/fi.po
@@ -362,7 +362,7 @@ msgid "Filter with information domain"
 msgstr "Rajaa tietoalueella"
 
 msgid "Filter results"
-msgstr "Suodata hakutuloksia"
+msgstr "Rajaa hakutuloksia"
 
 msgid "result"
 msgstr "hakutulos"
